NEW285934
REGRESSION (288156@main): [macOS Debug arm64] http/tests/security/contentSecurityPolicy/connect-src-star-websocket-allowed.html is a flaky crash (failure in EWS)
https://bugs.webkit.org/show_bug.cgi?id=285934
Summary REGRESSION (288156@main): [macOS Debug arm64] http/tests/security/contentSecu...
Marta Darbinyan
Reported 2025-01-14 13:27:58 PST
The following test is a flaky crash in macOS Debug queue. http/tests/security/contentSecurityPolicy/connect-src-star-websocket-allowed.html Suspecting 288156@main is the culprit based on crash logs output in NetworkConnection Crash Thread Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.WebKit 0x11715cf18 WTFCrashWithInfo(int, char const*, char const*, int) 1 com.apple.WebKit 0x119295730 WebKit::NetworkConnectionToWebProcess::dispatchMessage(IPC::Connection&, IPC::Decoder&) 2 com.apple.WebKit 0x11818b0fc WebKit::NetworkConnectionToWebProcess::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 3 com.apple.WebKit 0x11b447a14 IPC::Connection::dispatchMessage(IPC::Decoder&) 4 com.apple.WebKit 0x11b447e70 IPC::Connection::dispatchMessage(WTF::UniqueRef<IPC::Decoder>) 5 com.apple.WebKit 0x11b448210 IPC::Connection::dispatchOneIncomingMessage() 6 com.apple.WebKit 0x11b46eb48 IPC::Connection::enqueueIncomingMessage(WTF::UniqueRef<IPC::Decoder>)::$_2::operator()() const 7 com.apple.WebKit 0x11b46eaa4 WTF::Detail::CallableWrapper<IPC::Connection::enqueueIncomingMessage(WTF::UniqueRef<IPC::Decoder>)::$_2, void>::call() 8 com.apple.JavaScriptCore 0x12dbfcf94 WTF::Function<void ()>::operator()() const 9 com.apple.JavaScriptCore 0x12dcc5be8 WTF::RunLoop::performWork() 10 com.apple.JavaScriptCore 0x12dcc9e64 WTF::RunLoop::performWork(void*) 11 com.apple.CoreFoundation 0x192306414 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ + 28 /AppleInternal/Library/BuildRoots/3a242bc5-6bec-11ef-af1c-daac7d5d70b1/Library/Caches/com.apple.xbs/Sources/CoreFoundation/CoreFoundation/RunLoop.subproj/CFRunLoop.c:1950 12 com.apple.CoreFoundation 0x1923063a8 __CFRunLoopDoSource0 + 176 /AppleInternal/Library/BuildRoots/3a242bc5-6bec-11ef-af1c-daac7d5d70b1/Library/Caches/com.apple.xbs/Sources/CoreFoundation/CoreFoundation/RunLoop.subproj/CFRunLoop.c:1994 13 com.apple.CoreFoundation 0x19230610c __CFRunLoopDoSources0 + 244 /AppleInternal/Library/BuildRoots/3a242bc5-6bec-11ef-af1c-daac7d5d70b1/Library/Caches/com.apple.xbs/Sources/CoreFoundation/CoreFoundation/RunLoop.subproj/CFRunLoop.c:2031 14 com.apple.CoreFoundation 0x192304cf8 __CFRunLoopRun + 840 /AppleInternal/Library/BuildRoots/3a242bc5-6bec-11ef-af1c-daac7d5d70b1/Library/Caches/com.apple.xbs/Sources/CoreFoundation/CoreFoundation/RunLoop.subproj/CFRunLoop.c:2949 15 com.apple.CoreFoundation 0x192304334 CFRunLoopRunSpecific + 572 /AppleInternal/Library/BuildRoots/3a242bc5-6bec-11ef-af1c-daac7d5d70b1/Library/Caches/com.apple.xbs/Sources/CoreFoundation/CoreFoundation/RunLoop.subproj/CFRunLoop.c:3414 16 com.apple.Foundation 0x1934c2918 -[NSRunLoop(NSRunLoop) runMode:beforeDate:] + 212 /AppleInternal/Library/BuildRoots/3a242bc5-6bec-11ef-af1c-daac7d5d70b1/Library/Caches/com.apple.xbs/Sources/Foundation/Foundation/Soil.subproj/NSRunLoop.m:373 17 com.apple.Foundation 0x19353a264 -[NSRunLoop(NSRunLoop) run] + 64 /AppleInternal/Library/BuildRoots/3a242bc5-6bec-11ef-af1c-daac7d5d70b1/Library/Caches/com.apple.xbs/Sources/Foundation/Foundation/Soil.subproj/NSRunLoop.m:398 18 libxpc.dylib 0x191f36788 _xpc_objc_main + 700 /AppleInternal/Library/BuildRoots/cb912154-53fd-11ef-bee5-ba7355c93fd5/Library/Caches/com.apple.xbs/Sources/libxpc/src/main.m:267 19 libxpc.dylib 0x191f46894 _xpc_main + 276 /AppleInternal/Library/BuildRoots/cb912154-53fd-11ef-bee5-ba7355c93fd5/Library/Caches/com.apple.xbs/Sources/libxpc/src/init.c:1291 20 libxpc.dylib 0x191f36324 xpc_main + 64 /AppleInternal/Library/BuildRoots/cb912154-53fd-11ef-bee5-ba7355c93fd5/Library/Caches/com.apple.xbs/Sources/libxpc/src/init.c:1374 21 com.apple.WebKit 0x1185e1178 WebKit::XPCServiceMain(int, char const**) 22 com.apple.WebKit 0x11b35c488 WKXPCServiceMain 23 com.apple.WebKit.Networking 0x1006e7f90 main 24 dyld 0x191e9c274 start + 2840 /AppleInternal/Library/BuildRoots/85cc1810-7a78-11ef-9d23-daac7d5d70b1/Library/Caches/com.apple.xbs/Sources/dyld/dyld/dyldMain.cpp:1334 History: https://results.webkit.org/?suite=layout-tests&test=http%2Ftests%2Fsecurity%2FcontentSecurityPolicy%2Fconnect-src-star-websocket-allowed.html&style=debug&architecture=arm64
Attachments
Radar WebKit Bug Importer
Comment 1 2025-01-14 13:28:47 PST
EWS
Comment 2 2025-01-14 14:57:20 PST
Test gardening commit 288894@main (07c52a50ef57): <https://commits.webkit.org/288894@main> Reviewed commits have been landed. Closing PR #39028 and removing active labels.
Sihui Liu
Comment 3 2025-01-17 10:27:22 PST
EWS
Comment 4 2025-01-17 15:19:14 PST
Committed 289088@main (d1aa2c5c0541): <https://commits.webkit.org/289088@main> Reviewed commits have been landed. Closing PR #39200 and removing active labels.
Sihui Liu
Comment 5 2025-01-21 14:34:20 PST
EWS
Comment 6 2025-01-22 09:53:54 PST
Test gardening commit 289241@main (068cde0f9235): <https://commits.webkit.org/289241@main> Reviewed commits have been landed. Closing PR #39342 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.