REGRESSION (288156@main): [macOS Debug arm64] http/tests/security/contentSecurityPolicy/connect-src-star-websocket-allowed.html is a flaky crash (failure in EWS) https://bugs.webkit.org/show_bug.cgi?id=285934 rdar://142905667

Reviewed by Ryosuke Niwa.

Ensure priviledged processes get update about shared prefences of web process, by sending messages in
WebProcessProxy::updateSharedPreferences, where WebProcessProxy::m_sharedPreferencesForWebProcess is updated.

Also rename WebProcessProxy::updateSharedPreferencesForWebProcess to WebProcessProxy::updateSharedPreferences for
easier search as there are functions with the same name.

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::preferencesDidChange):
* Source/WebKit/UIProcess/WebProcessProxy.cpp:
(WebKit::WebProcessProxy::initializePreferencesForGPUAndNetworkProcesses):
(WebKit::WebProcessProxy::sharedPreferencesDidChange):
(WebKit::WebProcessProxy::updateSharedPreferences):
(WebKit::WebProcessProxy::establishRemoteWorkerContext):
(WebKit::WebProcessProxy::updateSharedPreferencesForWebProcess): Deleted.
* Source/WebKit/UIProcess/WebProcessProxy.h:

Canonical link: https://commits.webkit.org/289088@main